assets/stylesheets/babble.scss
/* Icon styles */
.babble-icon {
  position: relative;
}

/* Dropdown styles */

.babble-title-wrapper {
  height: 25px;
  line-height: 25px;
}

.babble-title h4 {
  float: left;
  padding-right: 8px;
}

.babble-title i {
  color: #ccc;
}

.babble-context-toggle {
  position: relative;
  outline: 0;
  text-align: center;
  float: left;
  .fa-chevron-left { padding-top: 4px; }
  &:hover .babble-context-toggle-tooltip { opacity: 1; }
}

.babble-context-toggle-tooltip {
  opacity: 0;
  transition: .5s opacity;
  pointer-events: none;
  position: absolute;
  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.25);
  background: #fefefe;
  font-size: 13px;
  color: black;
  padding: 5px;
  word-wrap: normal;
  min-width: 150px;
  left: 50%;
  transform: translate(-50%, 0);
  &:after {
    content: ' ';
    width: 7px;
    height: 7px;
    top: 0;
    left: 50%;
    transform: rotate(45deg) translate(-50%, 0);
    position: absolute;
    background: #fefefe;
  }
}

@-moz-document url-prefix() {
  .babble-context-toggle-tooltip {
    top: 25px;
  }
}

/* Post styles */
.babble-posts {
  width: 100%;
  overflow: auto;
  height: 500px;
}

.babble-empty-topic-message {
  color: #ccc;
  text-align: center;
  padding: 25% 0;
}

.babble-post-container .row {
  margin-right: 12px;
}

.babble-post {
  clear: both;
}

.babble-post .babble-post-avatar a,
.babble-post .post-date {
  background-color: transparent !important; /* sorry mom. */
}

.babble-post-staged {
  opacity: .5;
}

.babble-post:hover, .babble-available-topic:hover {
  background-color: #f8f8ff;
}

.babble-post-content {
  display: table-cell;
  vertical-align: top;
}

.babble-post-content .post-info {
  width: 32px;
  text-align: right;
}

.babble-last-read-post-message {
  font-size: 8px;
  line-height: 10px;
  padding: 0 10px 0 5px;
}

li.babble-post .babble-post-content a.mention {
  display: inline;
  padding: 0;
}

.babble-post-avatar img {
  float: left;
  width: 20px;
  height: 20px;
  margin: 5px 5px 0 0;
}

.babble-post-body {
  padding-top: 5px;
  width: 100%;
  max-width: 225px;
}

.babble-post-info {
  padding-top: 5px;
}

.babble-post-meta-data {
  padding-top: 5px;
}

.babble-post .post-info {
  display: inline-block;
}

.babble-post .post-date {
  padding: 5px 0 0 0;
}

.babble-post .read-state {
  position: static;
  display: inline-block;
}

/* Available topic styles */
.babble-available-topics {
  padding-top: 10px !important; /* sorry mom. */
}

.babble-available-topic {
  line-height: 35px;
  cursor: pointer;
  font-weight: bold;
  padding-left: 15px;
}

/* Composer styles */

.babble-post-composer {
  position: relative;
  margin-right: 2px;
  text-align: right;
}

.babble-post-composer textarea {
  width: 100%;
  box-sizing: border-box;
  padding: 7px 21px 7px 7px;
  margin: 0;
  resize: none;
}

.babble-post-composer button.emoji {
  position: absolute;
  top: 2px;
  right: -2px;
  color: #888;
  background: transparent;
}

.babble-post .babble-post-body .cooked img {
  max-width: 223px; /* 12 extra px for Edge, don't ask... */
  height: auto;
}

.babble-composer .btn-primary {
  margin: 3px 1px;
}

.babble-composer-error-message {
  color: red;
  font-size: 10px;
  padding-right: 10px;
}

/* Dropdown styles */

.babble-menu {
  .slide-in { // styles for slide-in menu
    box-sizing: border-box;
    height: 100vh !important;
  }
  .drop-down { // styles for drop-down menu
    .panel-body {
      height: auto !important;
    }
    .babble-posts {
      max-height: 300px;
    }
  }
}

.babble-menu .panel-body {
  overflow: hidden;
  width: 100%;
}

/* Discourse overrides */

.babble-chat button.normalized {
  background: transparent;
  border: 0;
}

